--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1888,8 +1888,8 @@ input, select, textarea {
 				-ms-transition: opacity 0.2s ease-in-out;
 				transition: opacity 0.2s ease-in-out;
 				border-radius: 0.35em;
-				border: solid 3px rgba(255, 255, 255, 0.5);
-				color: #fff;
+				border: solid 3px #a4c9c2;
+				color: #95e4d4;
 				content: 'View';
 				display: inline-block;
 				font-size: 0.8em;
@@ -1907,12 +1907,15 @@ input, select, textarea {
 			}
 
 			.image.thumb:hover:after {
-				opacity: 1.0;
+				opacity: 0.5;
+				border-color: #a4c9c2;
+				color: #95e4d4;
 			}
 
 			.image.thumb:hover:before {
-				background: url("images/overlay.png"), url("images/overlay.png");
-				opacity: 1.0;
+				opacity: 0.5;
+				border-color: #a4c9c2;
+				color: #95e4d4;
 			}
 
 		.image img {
@@ -2386,9 +2389,9 @@ input, select, textarea {
 		background-color: #1f1815;
 		background-attachment: scroll,								scroll;
 		background-image: url("images/overlay.png"), url("../../images/bg.jpg");
-		background-position: top left,							top left;
-		background-repeat: repeat,								no-repeat;
-		background-size: auto,								150%;
+		background-position: top left,top left;
+		background-repeat: repeat,no-repeat;
+		background-size: auto,150%;
 		color: rgba(255, 255, 255, 0.5);
 		height: 100%;
 		left: 0;
